--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,12 @@ OPTION( QWT_WIDGETS "Enable QwtWidgets" ON )
 OPTION( QWT_EXAMPLES "Enable QwtExamples" OFF )
 OPTION( QWT_PLAYGROUND "Enable QwtPlayground" OFF )
 
-SET( CMAKE_CXX_STANDARD 11 )
+SET( CMAKE_CXX_STANDARD 14 )
 SET( CMAKE_INCLUDE_CURRENT_DIR ON )
 SET( CMAKE_AUTOMOC ON )
 SET( CMAKE_AUTORCC ON )
 
-IF( NOT CMAKE_SYSTEM_NAME STREQUAL Linux )
+IF( NOT CMAKE_SYSTEM_NAME STREQUAL Linux AND NOT CROSSCOMPILING )
   FILE( TO_CMAKE_PATH $ENV{QT5_HOST} QT5_HOST )
   SET( CMAKE_MODULE_PATH "${QT5_HOST}/lib/cmake" )
   SET( CMAKE_PREFIX_PATH ${QT5_HOST} )
