(firmware-builds#32) Support crosscompiling (correct)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ SET( CMAKE_INCLUDE_CURRENT_DIR ON )
 SET( CMAKE_AUTOMOC ON )
 SET( CMAKE_AUTORCC ON )
 
-IF( NOT CMAKE_SYSTEM_NAME STREQUAL Linux AND NOT CROSSCOMPILING )
+IF( NOT CMAKE_SYSTEM_NAME STREQUAL Linux AND NOT CMAKE_CROSSCOMPILING )
   FILE( TO_CMAKE_PATH $ENV{QT5_HOST} QT5_HOST )
   SET( CMAKE_MODULE_PATH "${QT5_HOST}/lib/cmake" )
   SET( CMAKE_PREFIX_PATH ${QT5_HOST} )
